--- a/bab2-tinjauan-pustaka.tex
+++ b/bab2-tinjauan-pustaka.tex
@@ -58,7 +58,32 @@ Agar ontologi dapat dipahami oleh komputer, ontologi tersebut harus direpresenta
 %-----------------------------------------------------------------------------%
 \section{Zotonic}
 %-----------------------------------------------------------------------------%
-	Zotonic merupakan web yang bersifat \textit{open source}, \textit{real-time web framework}, dan sekaligus sebagai \textit{Content Management System} (CMS) yang dibangun menggunakan bahasa pemrograman erlang \citep{zotonic.overview}. Selain merupakan sebuah CMS dan \textit{framework}, Zotonic juga merupakan sebuah web server yang dapat menjalankan web langsung tanpa bantuan web server seperti Apache dan Nginx.
+
+Zotonic merupakan web yang bersifat \textit{open source}, \textit{real-time web framework}, dan sekaligus sebagai \textit{Content Management System} (CMS) yang dibangun menggunakan bahasa pemrograman erlang \citep{zotonic.overview}. Selain merupakan sebuah CMS dan \textit{framework}, Zotonic juga merupakan sebuah web server yang dapat menjalankan web langsung tanpa bantuan web server seperti Apache dan Nginx. Karena dibangun dengan bahasa pemrograman erlang, Zotonic sangat mengutamakan kecepatan.
+
+Menurut Zotonic, kecepatan dari zotonic ini sendiri bisa mencapai 10x lebih cepat daripada CMS yang dibangun menggunakan bahasa pemrograman PHP. Hal ini berdasarkan perbandingan antara proses pembuatan halaman pada kebanyakan \textit{framework} PHP yang membutuhkan waktu 150-600 ms sedangkan pada Zotonic biasanya hanya membutuhkan waktu 10 ms atau kurang. Selain itu, Zotonic memiliki mekanisme untuk mencegah permintaan yang berbeda untuk melakukan hal yang sama pada waktu yang bersamaan. Ketika terdapat dua atau lebih permintaan datang untuk halaman yang sama, atau bagian dari halaman yang sama, maka zotonic akan melakukan pekerjaan sekali dan mengirimkan hasilnya ke semua permintaan yang masuk. Zotonic juga menyimpan data yang sering digunakan pada memori, sehingga dapat mencegah kueri yang banyak kepada database. Pada erlang, kode akan dimuat dan akan terus dimuat sampai ada perubahaan kode berikutnya sehingga hal ini dapat membuat zotonic lebih efisien dibandingkan PHP \citep{zotonic.speed}.
+
+Zotonic juga menerapkan sistem modular. Zotonic dibuat dari lapisan kode yang umum dengan modul yang menyediakan fungsi utama lainnya. \textit{Template, actions, controllers, javascript, css, dispatch rules}, semuanya berasal dari modul. Modul dapat memperbanyak, mengubah atau bekerja sama dengan modul lainnya. Modul dapat mendefinisikan ulang \textit{template, javascript, css, actions} dan \textit{dispatch rules} dari modul lainnya.
+
+Zotonic juga melakukan pemisahan antara model, tampilan, dan \textit{controller} atau biasa disebut MVC yang telah menjadi \textit{best practice} pada proses pembuatan web dalam waktu yang lama. Hal ini bagus untuk pemisahan tanggung jawab \citep{zotonic.mvc}. Hal ini akan memberikan kesempatan kepada \textit{programmer} dari program dan pengembang tampilan (\textit{front-ender}) untuk membuat HTML, CSS, dan lainnya sendiri berdasarkan kebutuhannya. Pengembang tampilan memiliki akses baca pada hampir semua informasi yang tersedia pada Zotonic. Pada \textit{template} dapat langsung memanggil kueri, mengambil \textit{properties} dari pages, melakukan pengecekan kunci konfigurasi, dan lainnya. Sehingga \textit{programmer} tidak butuh membuat \textit{controller} lainnya atau mengadopsi beberapa \textit{controller} untuk memberikan informasi ekstra kepada \textit{template}. Dan pengembang tampilan tidak perlu untuk menunggu \textit{programmer}. Hal ini berguna agar pengembang tampilan dapat secara langsung mengambil dan menampilkan data dari Zotonic pada \textit{template}.
+
+Selain itu, tampilan pada zotonic dibangun menggunakan \textit{jQuery} dan CSS \textit{framework Bootstrap} yang merupakan salah satu CSS \textit{framework} yang sangat populer saat ini \citep{awwwards.css}. Selain penggunaan \textit{jQuery} dan \textit{Bootstrap}, Zotonic juga mengadopsi penggunaan ErlyDTL (\textit{Erlang implementation of the Django Template Language}). ErlyDTL digunakan agar pemuatan data dari basis data dapat dilakukan langsung dari \textit{template} yang ingin memuat data itu sendiri. Zotonic sendiri menambahkan beberapa fitur pada ErlyDTL yang diadopsi seperti untuk \textit{caching} dan \textit{template} hanya di\textit{compile} ke memori sehingga dapat mencegah masalah ketika logika internal dari \textit{template} berubah versi.
+
+Selain itu, zotonic menawarkan fitur fleksibilitas pada model data. Hal ini karena zotonic memberikan kebebasan kepada penggunanya untuk melakukan penambahan atau pengurangan terhadap model data. Model data pada Zotonic sendiri merupakan bentuk implementasi dari web semantik. Model datanya memiliki dua konsep utama yaitu \textit{resource} dan \textit{edge} \citep{zotonic.model}. \textit{Resource} pada Zotonic biasanya disebut sebagai \textit{pages} pada halaman admin karena semua \textit{resource} yang dihasilkan pada aplikasi akan ditampilkan sebagai sebuah \textit{pages}. \textit{Resources} memiliki bagian utama yaitu mereka memiliki \textit{properties} seperti judul, ringkasan, dan isi bodi serta mereka milik dari sebuah \textit{category}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.6\textwidth]
+	{pics/dataModel.png}
+	\caption{Contoh Data Model}
+	\label{fig:dataModel}
+\end{figure}
+\vspace{-1cm}
+\begin{center}
+{\small Sumber gambar: \citep{zotonic.model}}
+\end{center}
+
+Pada \pic~\ref{fig:dataModel}, blok persegi menggambarkan \textit{resource} dan panah menggambarkan \textit{edge}. Alice adalah sebuah \textit{resource} yang berkategori \textit{person}. Begitu juga halnya dengan Bob yang merupakan \textit{resource} dengan kategori \textit{person}. Hal ini menunjukkan bahwa pada Zotonic, suatu kategori dapat memiliki banyak \textit{instance} yang berupa \textit{resource}. \textit{Cooking} dan \textit{Tutorials} sama-sama merupakan \textit{resources} yang berkategori \textit{keyword} sedangan \textit{Cooking For Dummies} merupakan \textit{resource} yang berkategori \textit{article}. \textit{has\_keyword} merupakan \textit{edge} yang menunjukan hubungan antara suatu \textit{resource} dengan \textit{resource} lainnya. Hal ini dapat dilihat bahwa \textit{resource cooking for dummies} memiliki \textit{keyword} yaitu \textit{cooking} dan \textit{tutorials}. Dengan kata lain, kategori \textit{article} memiliki hubungan dengan kategori \textit{keyword} yaitu \textit{article} mempunyai \textit{keyword}. Ini sama dengan relasi yang menghubungkan suatu \textit{class} dengan \textit{class} lainnya pada ontologi. Dengan model data yang seperti ini, zotonic merupakan salah satu CMS yang menerapkan implementasi dari web semantik.
 %-----------------------------------------------------------------------------%
 \section{\textit{Software Product Line}}
 %-----------------------------------------------------------------------------%
