--- a/bib.bib
+++ b/bib.bib
@@ -153,6 +153,38 @@
 	note = {[Diakses 24 Mei 2017]}
 }
 
+@online{zotonic.speed,
+	author = {Zotonic},
+	title = {Speed},
+	year = {n.d.},
+	howpublished = {\url{http://zotonic.com/page/614/speed}},
+	note = {[Diakses pada 28 Mei 2017]}
+}
+
+@online{zotonic.model,
+	author = {Zotonic},
+	title = {The Zotonic data model},
+	year = {n.d.},
+	howpublished = {\url{http://docs.zotonic.com/en/latest/user-guide/data-model.html}},
+	note = {[Diakses pada 28 Mei 2017]}
+}
+
+@online{zotonic.mvc,
+	author = {Zotonic},
+	title = {MVC},
+	year = {n.d.},
+	howpublished = {\url{http://zotonic.com/page/621/mvc}},
+	note = {[Diakses pada 28 Mei 2017]}
+}
+
+@online{awwwards.css,
+	author = {Awwwards},
+	title = {What are Frameworks? 22 Best Responsive CSS Frameworks for Web Design},
+	year = {2017},
+	howpublished = {\url{https://www.awwwards.com/what-are-frameworks-22-best-responsive-css-frameworks-for-web-design.html}},
+	note = {[Diakses pada 28 Mei 2017]}
+}
+
 @MISC{net.oxford,
   key = {Oxford Dictionaries},
   howpublished = {\url{http://oxforddictionaries.com/definition/english/parallel}},
