--- a/bab3-rancangan.tex
+++ b/bab3-rancangan.tex
@@ -18,17 +18,84 @@ Agar dapat menghasilkan program yang bertujuan untuk melakukan integrasi ontolog
 \end{figure}
 \vspace{-0.3cm}
 
-Seperti yang dapat dilihat pada \pic~\ref{fig:skripsiroadmap}, \textit{Class} dan \textit{Feature Model} akan diproses menggunakan program translasi yang akan menghasilkan ABS \textit{Microservices} dimana ini telah dilakukan penelitian sebelumnya sehingga hal ini bukan merupakan bagian dari penelitian penulis. Setelah dihasilkan sebuah ABS \textit{Microservices} dari proses translasi tersebut, maka ABS \textit{Microservices} akan menghasilkan sebuah \textit{web service} yang dapat digunakan oleh program lainnya. Dalam penelitian ini, \textit{web services} yang dihasilkan oleh ABS \textit{Microservices} akan digunakan oleh \textit{Adaptor} yang akan terhubung dengan Zotonic. Selain digunakan untuk menghasilkan sebuah \textit{web service}, ABS \textit{Microservices} akan digunakan untuk menghasilkan sebuah ontologi menggunakan sebuah \textit{script} yang akan melakukan pemetaan dari \textit{class} dan \textit{feature model} menjadi \textit{class, datatype property, object property} dan \textit{rules} pada ontologi. Untuk pemetaan ini sendiri tidak termasuk dalam penelitian ini karena penulis hanya akan menggunakan sebuah ontologi yang telah dirancang sebelumnya. Nantinya melalui proses pemetaan ini, akan dihasilkan sebuah ontologi yang bersifat \textit{reusable}.
+Seperti yang dapat dilihat pada \pic~\ref{fig:skripsiroadmap}, \textit{Class} dan \textit{Feature Model} akan diproses menggunakan program translasi yang akan menghasilkan ABS \textit{Microservices} dimana ini telah dilakukan penelitian sebelumnya sehingga hal ini bukan merupakan bagian dari penelitian penulis. Setelah dihasilkan sebuah ABS \textit{Microservices} dari proses translasi tersebut, maka ABS \textit{Microservices} akan menghasilkan sebuah \textit{web service} yang dapat digunakan oleh program lainnya. Hal ini dapat dilihat pada \pic~\ref{fig:ABSRoadmap}
 
-Menggunakan ontologi yang telah dirancang sebelumnya, ontologi tersebut akan dipetakan ke dalam struktur dari zotonic yang akan digunakan. Proses pemetaan dari ontologi ke dalam zotonic ini sendiri telah dilakukan pada penelitian sebelumnya oleh Bravyto dimana setiap \textit{class} dari ontologi akan dipetakan menjadi nama dari kategori pada zotonic menggunakan \textit{script classAndObjectPropertyMapper.sh}. Selain melakukan pemetaan pada \textit{class, script} tersebut juga akan melakukan pemetaan \textit{datatype property} pada ontologi menjadi \textit{property} dari kategori pada zotonic serta pemetaan \textit{object property} pada ontologi menjadi \textit{predicate} pada zotonic. Pada penelitian tersebut, dilakukan juga pemetaan dari \textit{datatype property} menjadi \textit{business logic} menggunakan \textit{script} datatypePropertyMapper.sh.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.4\textwidth]
+	{pics/partABSRoadmap.jpg}
+	\caption{Rancangan Bagian ABS}
+	\label{fig:ABSRoadmap}
+\end{figure}
+\vspace{-0.3cm}
+
+Dalam penelitian ini, \textit{web services} yang dihasilkan oleh ABS \textit{Microservices} akan digunakan oleh \textit{Adaptor} yang akan terhubung dengan Zotonic. Selain digunakan untuk menghasilkan sebuah \textit{web service}, ABS \textit{Microservices} akan digunakan untuk menghasilkan sebuah ontologi menggunakan sebuah \textit{script} yang akan melakukan pemetaan dari \textit{class} dan \textit{feature model} menjadi \textit{class, datatype property, object property} dan \textit{rules} pada ontologi. Untuk pemetaan ini sendiri tidak termasuk dalam penelitian ini karena penulis hanya akan menggunakan sebuah ontologi yang telah dirancang sebelumnya. Nantinya melalui proses pemetaan ini, akan dihasilkan sebuah ontologi yang bersifat \textit{reusable}.
+
+Menggunakan ontologi yang telah dirancang sebelumnya, ontologi tersebut akan dipetakan ke dalam struktur dari zotonic yang akan digunakan. Proses pemetaan dari ontologi ke dalam zotonic ini sendiri telah dilakukan pada penelitian sebelumnya oleh Bravyto dimana setiap \textit{class} dari ontologi akan dipetakan menjadi nama dari kategori pada zotonic menggunakan \textit{script classAndObjectPropertyMapper.sh}. Selain melakukan pemetaan pada \textit{class, script} tersebut juga akan melakukan pemetaan \textit{datatype property} pada ontologi menjadi \textit{property} dari kategori pada zotonic serta pemetaan \textit{object property} pada ontologi menjadi \textit{predicate} pada zotonic. Pada penelitian tersebut, dilakukan juga pemetaan dari \textit{datatype property} menjadi \textit{business logic} menggunakan \textit{script} datatypePropertyMapper.sh. Proses ini digambarkan pada \pic~\ref{fig:ZotonicRoadmap} berikut ini
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]
+	{pics/partZotonicRoadmap.jpg}
+	\caption{Rancangan Bagian Zotonic dan Ontologi}
+	\label{fig:ZotonicRoadmap}
+\end{figure}
+\vspace{-0.3cm}
 
 Namun pada penelitian tersebut, pembuatan \textit{business logic} masih bersifat manual yang langsung ditaruh pada \textit{script} datatypepropertyMapper.sh. Pada penelitian ini, penulis akan membuat sebuah adaptor yang akan memanggil \textit{web service} sehingga \textit{business logic} pada zotonic akan lebih fleksibel karena memanfaatkan \textit{web service} serta memberikan kemudahan bagi \textit{developer} dalam hal melakukan modifikasi.
 %-----------------------------------------------------------------------------%
 \section{Rancangan \textit{Web Service}}
 %-----------------------------------------------------------------------------%
 
-	\todo{Jelasin gimana rancangan API nya.}
+	Agar \textit{web services} yang digunakan nantinya dapat sesuai dengan yang akan diimplementasikan, perlu dirancang terlebih dahulu bagaimana \textit{web services} yang akan digunakan. Pertama perlu didefinisikan bagaimana struktur dari JSON yang diberikan diterima. Pada penelitian ini, penulis mendefinisikan struktur JSON sebagai berikut
+	
+	\begin{minipage}{\linewidth}
+	\begin{lstlisting}[caption={Struktur JSON \textit{web services}}, label={lst:json}]
+	{
+		"status" : XXX,
+		"message": "information about data",
+		"data" : data
+	}
+	\end{lstlisting}
+	\end{minipage} \\
 
+	Pada kode \ref{lst:json}, struktur JSON terdiri dari status,\textit{message}, dan data. Status disini merupakan kode status yang didefinisikan agar memudahkan pada proses pembacaan hasil JSON nantinya. Berikut ini merupakan tabel mapping dari kode status
+	
+	\begin{table}
+		\centering
+		\caption{Tabel Status Kode}
+		\label{tab:statuscode}
+		\begin{tabular}{| c | l |}
+			\hline
+			Status & Keterangan \\ 
+			\hline
+			200 & Mengembalikan data kepada pemanggil \\
+			201 & Mengembalikan info sukses atau gagal \\
+			400 & Masuk ke dalam \textit{error exception} \\
+			\hline
+		\end{tabular}
+	\end{table}
+	
+	Pada tabel \ref{tab:statuscode}, terdapat tabel status kode. Jika data hasil dari pemanggilan API tersebut perlu diketahui seperti untuk pemanggilan total donasi yang hasilnya perlu diketahui, maka status kode diatur menjadi 200. Jika pada API yang dilakukan seperti proses menambah data baru pada database, melakukan update pada database, serta melakukan penghapusan data pada database, tidak perlu dikembalikan datanya sehingga status kode diatur menjadi 201 dan \textit{message} diatur menjadi informasi keberhasilan dari perintah yang dijalankan. Namun, jika proses \textit{insert, update,} atau \textit{delete} data pada database gagal dilakukan, atau data yang dicari pada database tidak ada maka status kode diset menjadi 400 dan \textit{message} diset menjadi penyebab dari error tersebut.
+	
+	Selain mendefinisikan status kode yang diberikan, perlu didefinisikan juga data apa yang akan dikirim seperti tabel berikut ini.
+	
+	\begin{table}
+		\centering
+		\caption{Tabel data}
+		\label{tab:tabelData}
+		\begin{tabular}{| c | l |}
+			\hline
+			Status & Data \\ 
+			\hline
+			200 & Data yang ingin dikirim \\
+			201 & Data keseluruhan \\
+			400 & null\\
+			\hline
+		\end{tabular}
+	\end{table}
+
+	Pada tabel \ref{tab:tabelData}, berdasarkan status kode yang telah didefinisikan pada tabel \ref{tab:statuscode} maka jika status kode 200, data akan berisi data yang ingin dikirim. Sebagai contoh, jika total donasi berhasil dilakukan, maka status kode 200 dan data akan berisi nominal dari total donasi. Untuk status kode 201, data akan berisi mengenai data yang diproses. Misalnya ingin menambahkan data pada database, dan jika berhasil maka status kode 201 dan data akan berisi seluruh data yang dimasukkan ke dalam database tersebut. Dan jika status kode 400, karena ini merupakan status kode untuk error maka data cukup diisi dengan null.
 %-----------------------------------------------------------------------------%
 \section{Rancangan \f{Adaptor}}
 %-----------------------------------------------------------------------------%
