--- a/bab4-implementasi.tex
+++ b/bab4-implementasi.tex
@@ -220,4 +220,39 @@ end.
 \section{Implementasi \textit{Refactoring Business Logic}}
 %-----------------------------------------------------------------------------%
 
-	\todo{Jelasin apa yang dilakukan pada Refactoring.}
+	Pada penelitian sebelumnya, proses pembuatan \textit{business logic} dilakukan secara langsung pada \textit{script} datatypePropertyMapper.sh menggunakan \textit{javascript}. Tetapi \textit{business logic} antara satu situs dengan situs lainnya dapat berbeda sehingga dibutuhkan sebuah mekanisme agar \textit{business logic} dapat lebih dinamis berdasarkan ontologi yang digunakan. Untuk mengatasi hal tersebut, maka modul m\_abs yang telah diimplementasi akan digunakan untuk membuat \textit{business logic} agar bersifat dinamis. \textit{Script} datatypePropertyMapper.sh akan menghasilkan \textit{template} untuk admin dan juga \textit{template} untuk halaman pengguna sehingga untuk menambahkan \textit{business logic} yang bersifat dinamis dapat dimanfaatkan implementasi dari pemanggilan \textit{adaptor} dari \textit{template} yang sudah dijelaskan pada bagian sebelumnya. Berikut ini merupakan \textit{business logic} untuk menghitung total sebelum dilakukan \textit{refactoring}.
+	
+	\begin{minipage}{\linewidth}
+	\begin{lstlisting}[caption={Fungsi total sebelum refactoring},label={lst:totalBefore}]
+	{% javascript %}
+		var predId = [];
+		var total = 0;
+	{% endjavascript %}
+	{% with m.search.paged[{referrers id=id page=page}] as result %}
+		{% for id, pred_id in result %}
+			{% javascript %}
+				if (predId.indexOf("{{ pred_id }}") == -1)
+					{predId.push("{{ pred_id }}");
+			{% endjavascript %}
+			{% for amountholder in r.s[m.rsc[pred_id].title | lower] %}
+				{% if amountholder.amount %}
+					{% javascript %}
+						total += {{ amountholder.amount }};
+					{% endjavascript %}
+				{% endif %}
+			{% endfor %}
+			{% javascript %}}
+			{% endjavascript %}
+		{% endfor %}
+	{% endwith %}
+	\end{lstlisting}
+	\end{minipage} \\
+
+	Pada kode \ref{lst:totalBefore}, dapat dilihat bagaimana proses penjumlahan untuk fungsi total dilakukan secara \textit{javascript}. Setelah dilakukan \textit{refactoring} dengan cara memanfaatkan implementasi dari pemanggilan \textit{adaptor} dari \textit{template}, maka kode \ref{lst:totalBefore} akan diganti menjadi kode \ref{lst:totalAfter}
+	\begin{minipage}{\linewidth}
+	\begin{lstlisting}[caption={Fungsi total setelah refactoring}, label={lst:totalAfter}]
+	{{m.abs.totalDonation[{query id=id}]}}
+	\end{lstlisting}
+	\end{minipage} \\
+
+	Pada kode \ref{lst:totalAfter}, akan dipanggil \textit{adaptor} dengan \textit{key totalDonation} yang akan menjalankan fungsi untuk menghitung total donasi dengan id program yang sedang diakses baik pada \textit{template} admin maupun \textit{template} untuk pengguna.
