--- a/bab2-tinjauan-pustaka.tex
+++ b/bab2-tinjauan-pustaka.tex
@@ -56,8 +56,10 @@ Selain memiliki tiga komponen yang telah disebutkan diatas, pada ontologi juga t
 
 Agar ontologi dapat dipahami oleh komputer, ontologi tersebut harus direpresentasikan dalam bentuk yang dapat dibaca oleh komputer salah satunya adalah OWL. \textit{Ontoloy Web Language} (OWL) merupakan versi RDFS yang memiliki kosa kata dan \textit{rules} yang lebih ketat sehingga OWL lebih mudah dipahami oleh komputer karena dapat lebih menggambarkan ontologi yang dibuat \citep{owl.overview}. Pada penelitian ini, digunakan setidaknya tiga elemen dari OWL yaitu \textit{class, datatype property} serta \textit{object property}. \textit{Class} akan menggambarkan kelas dari ontologi, \textit{datatype property} akan menggambarkan atribut dari kelas, serta \textit{object property} akan menggambarkan relasi antar suatu kelas dengan kelas lainnya.
 %-----------------------------------------------------------------------------%
-\section{Zotonic}
+\section{Web \textit{Framework} Berbasis Semantic: Zotonic}
 %-----------------------------------------------------------------------------%
+
+\todo{Jelasin dahulu apa itu web semantik}
 
 Zotonic merupakan web yang bersifat \textit{open source}, \textit{real-time web framework}, dan sekaligus sebagai \textit{Content Management System} (CMS) yang dibangun menggunakan bahasa pemrograman erlang \citep{zotonic.overview}. Selain merupakan sebuah CMS dan \textit{framework}, Zotonic juga merupakan sebuah web server yang dapat menjalankan web langsung tanpa bantuan web server seperti Apache dan Nginx. Karena dibangun dengan bahasa pemrograman erlang, Zotonic sangat mengutamakan kecepatan.
 
