--- a/bab5-hasil.tex
+++ b/bab5-hasil.tex
@@ -59,5 +59,5 @@ Agar ontologi dan \textit{web services} dapat terintegrasi, terdapat beberapa fi
 %-----------------------------------------------------------------------------%
 
 %-----------------------------------------------------------------------------%
-\section{Implementasi Studi Kasus BSMI}
+\section{Contoh Penerapan pada Web BSMI}
 %-----------------------------------------------------------------------------%
