--- a/laporan_setting.tex
+++ b/laporan_setting.tex
@@ -3,13 +3,13 @@
 %-----------------------------------------------------------------------------%
 % 
 % Judul laporan. 
-\var{\judul}{Pengembangan Program Integrasi Ontologi dan \textit{Web Services} pada Zotonic}
+\var{\judul}{Integrasi Ontologi dan \textit{Web Services} pada Zotonic}
 % 
 % Tulis kembali judul laporan, kali ini akan diubah menjadi huruf kapital
-\Var{\Judul}{PENGEMBANGAN PROGRAM INTEGRASI ONTOLOGI DAN \textit{WEB SERVICES} PADA ZOTONIC}
+\Var{\Judul}{INTEGRASI ONTOLOGI DAN \textit{WEB SERVICES} PADA ZOTONIC}
 % 
 % Tulis kembali judul laporan namun dengan bahasa Ingris
-\var{\judulInggris}{Development of Ontology and Web Services Integration Program on Zotonic}
+\var{\judulInggris}{Ontology and Web Services Integration on Zotonic}
 
 % 
 % Tipe laporan, dapat berisi Skripsi, Tugas Akhir, Thesis, atau Disertasi
