--- a/bab4-implementasi.tex
+++ b/bab4-implementasi.tex
@@ -236,8 +236,8 @@ end.
 	{% with m.search.paged[{referrers id=id page=page}] as result %}
 		{% for id, pred_id in result %}
 			{% javascript %}
-				if (predId.indexOf("{{ pred_id }}") == -1)
-					{predId.push("{{ pred_id }}");
+				if (predId.indexOf("{{ pred_id }}") == -1) {
+					predId.push("{{ pred_id }}");
 			{% endjavascript %}
 			{% for amountholder in r.s[m.rsc[pred_id].title | lower] %}
 				{% if amountholder.amount %}
@@ -246,7 +246,8 @@ end.
 					{% endjavascript %}
 				{% endif %}
 			{% endfor %}
-			{% javascript %}}
+			{% javascript %}
+				}
 			{% endjavascript %}
 		{% endfor %}
 	{% endwith %}
